--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@interest-protocol/ui-kit": "0.2.26-alpha",
     "@stylin.js/elements": "^1.0.2",
     "next": "14.0.3",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "unikey": "^1.1.0"
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.11.0",
