:sparkles: feat: add info

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "unikey": "^1.1.0"
   },
   "devDependencies": {
